<resources>
    <string name="app_name">GreekPodcasts</string>
    <string name="category_picture_description">This picture represents a podcast category.</string>
    <string name="podcast_picture_description">This picture represents a podcast.</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tempus nec elit sit amet hendrerit. Pellentesque eu sollicitudin ante, at tincidunt massa. Duis eget dolor quis massa ornare feugiat. Sed eget nunc nibh. Morbi pharetra est enim, sed placerat nunc lacinia volutpat. Nulla nec volutpat neque. Duis vestibulum laoreet mattis. Fusce eu metus sem. Etiam non mi at quam egestas venenatis sit amet malesuada felis. Aenean aliquet pretium nisl id cursus. Nulla ultrices dolor in nibh lacinia tincidunt. Curabitur tincidunt viverra est, vel ornare mi sagittis sit amet. Phasellus nisi sapien, egestas sed nulla eget, elementum fringilla urna.  Duis at lacus vitae nunc egestas vehicula. Fusce feugiat malesuada dolor ac imperdiet. Pellentesque lobortis iaculis metus, lobortis vulputate augue euismod vel. Suspendisse nisi velit, convallis nec dui non, dictum molestie est. In elementum, ipsum vitae tempor maximus, lectus tortor faucibus nisl, nec gravida risus lacus id nisi. Morbi finibus pellentesque nulla et auctor. Ut tincidunt mattis iaculis. Etiam purus ante, tristique in posuere non, placerat vel ipsum.  Aenean sed velit id dolor ultrices viverra nec sit amet metus. Praesent vitae ex ligula. Donec eleifend malesuada dui, ac pretium tortor congue vel. Nam venenatis dolor in sapien eleifend accumsan. Praesent tincidunt posuere sapien, sit amet fringilla nisl luctus ac. Vestibulum at feugiat nunc. Sed eu mollis quam. Aliquam porttitor odio ac dui volutpat finibus. Nunc elit nibh, blandit id ligula sit amet, viverra eleifend mauris.  Donec turpis magna, commodo quis elementum sed, pulvinar et ante. Praesent malesuada justo est, at congue velit facilisis et. Morbi in blandit dolor. Aliquam at accumsan velit. Nulla urna augue, molestie in egestas id, commodo sed quam. Cras cursus leo nisl, in congue nisi tristique in. Phasellus feugiat tempus tellus. Duis leo libero, porta maximus tristique id, porta ac massa. Sed arcu dui, suscipit ut luctus id, lobortis ut lacus. Curabitur sed dui et augue dignissim molestie quis sed eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;  Morbi tincidunt nulla ac urna lacinia, et fringilla mi volutpat. Nullam efficitur purus ac rutrum egestas. Aliquam vitae ante non est rutrum consequat non ac lacus. Fusce ultricies libero sit amet orci tristique hendrerit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque tristique, elit sit amet convallis porta, felis dolor dignissim leo, ultricies pretium justo diam in ipsum. Mauris eu ligula tempor, sagittis tortor quis, vulputate nisl. Quisque convallis felis nec lacus convallis porttitor. Pellentesque dapibus dolor magna, vel vulputate sapien tincidunt eu. Proin enim purus, vulputate a nisl vitae, tincidunt imperdiet est. Morbi aliquet mollis pharetra. Maecenas vehicula libero ligula, nec porttitor odio porta a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce sit amet vestibulum ligula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce at sodales metus.</string>
    <string name="podcast_poster_content_description">This is the poster of the podcast on the quick media player.</string>
    <string name="personal_statement_label">Personal Statement</string>
    <string name="podcast_title_label">Podcast Title</string>
    <string name="insert_title_here_label">Write your title here...</string>
    <string name="choose_poster_label">Choose the poster</string>
    <string name="click_the_icon_label">Click the icon</string>
    <string name="pick_category_label">Pick a Category</string>
    <string name="provide_description">Provide a Description</string>
    <string name="insert_description_label">Describe the show here...</string>
    <string name="choose_podcast_label">Choose Podcast</string>
    <string name="poster_label">Poster</string>
    <string name="click_the_icon_to_update_label">Click the icon to upload a new one.</string>
    <string name="description_label">Description</string>
    <string name="episodes_label">Episodes</string>
    <string name="view_all_label">View All</string>
    <string name="personal_pic_content_description">This is your personal picture.</string>
    <string name="picture_label">Picture</string>
    <string name="promotion_label">Promote Yourself</string>
    <string name="pick_category_explanation_hint">You may pick only one category</string>
    <string name="choose_poste_explanation_hint">Poster should be at least 500x500 pixels.</string>
    <string name="create_title_explanation_hint">Type an accurate title. Don\'t exceed the 30 char limit.</string>
    <string name="description_explanation_hint">Write a small yet comprehensive description about the podcast.</string>
    <string name="tab_label_shows">Shows</string>
    <string name="tab_label_categories">Categories</string>
    <string name="tab_label_favorites">Favorites</string>

    <!--    Date Utils  -->
    <string name="month_jan">January</string>
    <string name="month_feb">February</string>
    <string name="month_mar">March</string>
    <string name="month_apr">April</string>
    <string name="month_may">May</string>
    <string name="month_jun">June</string>
    <string name="month_jul">July</string>
    <string name="month_aug">August</string>
    <string name="month_sep">September</string>
    <string name="month_oct">October</string>
    <string name="month_nov">November</string>
    <string name="month_dec">December</string>

    <string name="podcaster_prefix">By </string>
    <string name="tab_label_episodes">Episodes</string>
    <string name="tab_label_about">About</string>
    <string name="fransisco_tarega_mp3">https://www.mfiles.co.uk/mp3-downloads/francisco-tarrega-lagrima.mp3</string>
    <string name="chopin_mp3">https://www.mfiles.co.uk/mp3-downloads/franz-liszt-liebestraum-3-easy-piano.mp3</string>

    <string name="pause_label">pause</string>
    <string name="play_label">play</string>
    <string name="no_previous_episode_msg">This is no previous episode. This is the first one.</string>
    <string name="no_next_episode_msg">This is the last episode.</string>
    <string name="joined_date_prefix">Joined on </string>
    <string name="mediaplayer_unknown_error">Unknown error!</string>
    <string name="mediaplayer_server_died_error">Error: Server died!</string>
    <string name="downloading_label">Downloading...</string>
    <string name="download_completed">Download completed</string>
    <string name="download_error">Couldn\'t download the file</string>
    <string name="portofolio_create_label">Create</string>
    <string name="portofolio_published_label">Published</string>
    <string name="portofolio_personal_label">Personal</string>
    <string name="all_episodes_label">All Episodes</string>
    <string name="add_new_episode_label">Add new episode</string>
    <string name="podcast_label">Podcast</string>
    <string name="insert_new_title_label">Insert new title</string>
    <string name="insert_podcaster_name_title">Write your name</string>
    <string name="insert_personal_statement_title">Leave a personal statement</string>
    <string name="add_promotion_label">Add Promotion Link</string>
    <string name="promotion_link_title_label">Title:</string>
    <string name="promotion_link_url_label">Url:</string>
    <string name="no_title_or_url">Both title and URL needed.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="personal_statement_imagebutton_content_description">Press this button to edit your personal statement,</string>
    <string name="error_fetching_episodes_message">Could not get episodes!</string>
    <string name="add_episode_imagebutton_content_description">Click to add an episode</string>
    <string name="player_play_content_description">Click to play the audio file</string>
    <string name="player_pause_content_description">Click to pause the audio file</string>
    <string name="background_content_description">Background image.</string>
    <string name="edit_promotion_content_description">Click to edit promotion links.</string>
    <string name="edit_name_content_description">Click to edit your name.</string>
    <string name="player_previous_content_description">Skip to previous</string>
    <string name="player_next_content_description">Skip to next.</string>
    <string name="star_content_description">Click to star the podcast</string>
    <string name="download_content_description">Click to download the episode</string>
    <string name="info_content_description">Click to view info.</string>
    <string name="favorite_content_description">This item is favorited, as indicated by the star</string>
    <string name="pop_up_menu_content_description">A pop up menu</string>
    <string name="edit_description_content_description">Edit the description</string>
    <string name="podcast_title_content_description">Podcast title</string>
    <string name="download_started_message">Download started.</string>
    <string name="no_podcast_to_save_message">No podcast to save.</string>
    <string name="create_profile_first_message">Create profile first.</string>
    <string name="complete_all_fields_message">Complete all fields.</string>
    <string name="could_not_upload_message">Could not upload.</string>
    <string name="uploaded_successfully_message">Uploaded successfully!</string>
    <string name="menu_clicked_message">Menu clicked!</string>
    <string name="must_choose_picture_message">Must choose picture.</string>
    <string name="enter_title_select_audio_message">Enter title and select audio.</string>
    <string name="education_label">Education</string>
    <string name="brought_to_you_message">Brought to you by Panos Sketos</string>
    <string name="personal_statement_label_2">I am Panos sketos and bla bla bla bla bla bla I am Panos sketos and bla bla bla bla bla blaI am Panos sketos and bla bla bla bla bla blaI am Panos sketos and bla bla bla bla bla blaI am Panos sketos and bla bla bla bla bla bla</string>
</resources>
