<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/primaryColor">

    <TextView
        style="@style/Episode_Title"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        android:text="@string/add_promotion_label"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Portofolio_Label"
        android:text="@string/promotion_link_title_label"/>

    <EditText
        android:id="@+id/portofolio_title_edittext"
        style="@style/Portofolio_EditText_Hint"
        android:textColor="@color/primaryTextColor"
        tools:text="The title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Portofolio_Label"
        android:text="@string/promotion_link_url_label"/>

    <EditText
        android:id="@+id/portofolio_url_edittext"
        style="@style/Portofolio_EditText_Hint"
        android:textColor="@color/secondaryColor"
        android:inputType="textUri"
        tools:text="https://www.compass.com/append/ok/otinanai"/>

</LinearLayout>