<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--    TODO: Some android:text shall become tools:text  -->

        <TextView
            android:id="@+id/podcast_title_label"
            style="@style/Portofolio_Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/podcast_title_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/podcast_title_editText"
            style="@style/Portofolio_Label.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:hint="@string/insert_title_here_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/podcast_title_label" />

        <TextView
            android:id="@+id/choose_poster_label"
            style="@style/Portofolio_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/choose_poster_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/podcast_title_editText" />

        <ImageView
            android:id="@+id/update_podcast_pic_imageview"
            style="@style/Portofolio_ImageView"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_poster_label"
            android:contentDescription="@string/podcast_poster_content_description" />

        <TextView
            android:id="@+id/click_the_icon_label"
            style="@style/Portofolio_EditText_Hint"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/click_the_icon_label"
            app:layout_constraintStart_toEndOf="@+id/update_podcast_pic_imageview"
            app:layout_constraintTop_toTopOf="@+id/update_podcast_pic_imageview" />

        <TextView
            android:id="@+id/pick_category_label"
            style="@style/Portofolio_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/pick_category_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_podcast_pic_imageview" />

        <Spinner
            android:id="@+id/categories_spinner"
            style="@style/Portofolio_Spinner"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pick_category_label" />

        <TextView
            android:id="@+id/provide_description_label"
            style="@style/Portofolio_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/provide_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categories_spinner" />

        <EditText
            android:id="@+id/description_editText"
            style="@style/Portofolio_Label.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:hint="@string/insert_description_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/provide_description_label" />

        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            style="?android:attr/progressBarStyle"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/categories_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pick_category_label"
            app:layout_constraintTop_toTopOf="@+id/pick_category_label" />

        <TextView
            android:id="@+id/chosen_image_file_name"
            style="@style/Portofolio_EditText_Hint"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="?colorAccent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/click_the_icon_label"
            app:layout_constraintEnd_toEndOf="@+id/click_the_icon_label"
            app:layout_constraintStart_toStartOf="@+id/click_the_icon_label"
            app:layout_constraintTop_toTopOf="@+id/click_the_icon_label" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>

